# libsh-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/libsh/: __init__.py  logs.py
src/libsh/logging/: __init__.py  config.py  processors.py  render.py
src/libsh/proc/: __init__.py  float.py  logger_filter.py
src/shlib/: __init__.py  logs.py
tests/: test_logs.py
