[project]
name = "libsh"
version = "0.1.0"
description = "Scott Hyndman's reusable common package for Python projects. Provides opinionated structured logging with custom rendering (24-bit colors, relative timestamps, compact levels) and type-safe value formatting utilities (time units, ranges, pretty-printing)."
authors = [{name = "shyndman", email = "scotty.hyndman@gmail.com"}]
requires-python = ">=3.12"
dependencies = ["numpy", "pydantic>=2", "rich>=14", "structlog>=25"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project.urls]
repository = "https://github.com/shyndman/libsh-python"
"Bug Tracker" = "https://github.com/shyndman/libsh-python/issues"

[tool.uv.build-backend]
module-name = "libsh"
module-root = "src"


[tool.pyright]
include = ["src", "tests"]
ignore = ["**/.venv"]
defineConstant = {DEBUG = true}
reportMissingImports = "error"
deprecateTypingAliases = true
reportDeprecated = "information"
pythonPlatform = "Linux"

[tool.ruff]
line-length = 100
target-version = "py312"
indent-width = 2

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["libsh"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
